[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Lobby.gd" type="Script" id=1]
[ext_resource path="res://Images/Lobby Button.svg" type="Texture" id=2]
[ext_resource path="res://Images/Lobby Button Pressed.svg" type="Texture" id=3]
[ext_resource path="res://Godot Resources/Nunito.tres" type="DynamicFont" id=4]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.0
margin_top = -148.5
margin_right = 135.0
margin_bottom = 148.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Create" type="TextureButton" parent="Buttons"]
modulate = Color( 0.870588, 0.85098, 1, 1 )
margin_right = 270.0
margin_bottom = 71.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 2 )
texture_focused = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/Create"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -2.0
margin_bottom = -6.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Create Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="TextureButton" parent="Buttons"]
modulate = Color( 0.729412, 0.698039, 0.933333, 1 )
margin_top = 75.0
margin_right = 270.0
margin_bottom = 146.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 2 )
texture_focused = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/Join"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -3.0
margin_bottom = -5.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Join Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Singleplayer" type="TextureButton" parent="Buttons"]
modulate = Color( 0.780392, 0.654902, 1, 1 )
margin_top = 150.0
margin_right = 270.0
margin_bottom = 221.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 2 )
texture_focused = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/Singleplayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -3.0
margin_bottom = -5.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Singleplayer"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="TextureButton" parent="Buttons"]
modulate = Color( 0.65098, 0.760784, 0.929412, 1 )
margin_top = 225.0
margin_right = 270.0
margin_bottom = 297.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 2 )
texture_focused = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -2.0
margin_bottom = -6.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingScreen" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0.866667, 0.8, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LoadingScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.0
margin_top = -19.5
margin_right = 145.0
margin_bottom = 19.5
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Waiting for opponent..."
valign = 1

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="Buttons/Create" to="." method="_on_Create_pressed"]
[connection signal="pressed" from="Buttons/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="Buttons/Singleplayer" to="." method="_on_Singleplayer_pressed"]
[connection signal="pressed" from="Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
